# Ripetizioni_Alice

./: CMakeLists.txt  README.md  library.h  testing.txt
src/: Esercizio1.c  FunzioniUtili.c  IMC.c  InvesioneVettore.c  Testing.c  bubbleSort.c  insertionSort.c
src/Ordinamento_Vettori/: FunzioniUtili_Vettori.c  selectionSort.c
src/Ordinamento_Vettori/Esercizi/: Riordina_Vettore.c  Riordina_Vettore_Soluzione.c
src/Puntatori_E_File/: SperimentiamoPuntatori.c
src/Puntatori_E_File/Esercizi/: File_1.c  File_2.c  File_3.c  File_4.c  Nomi_E_Cognomi.c  Puntatori_E_Funzioni.c  Rubrica.c  Teoria_Puntatori_Soluzione.c
